--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -2,7 +2,7 @@ name: 'Create README.md file'
 on:
   push:
     branches:
-      - aws-cost-billing-alarm
+      - aws-cost-bill-alarm
 
 jobs:
   readme-create:
