update terrastate.yml file

--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -21,7 +21,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
           aws-region: us-east-2
 
-      - name: 'Terratest Basic'
+      - name: 'Terratest new-sns-consolidated-acct'
         if: ${{ github.event.label.name == 'terratest' }}
         uses: 'clouddrove/github-actions@v9.0.2'
         with:
@@ -30,7 +30,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 'Terratest Secure'
+      - name: 'Terratest new-sns-with-acct-id'
         if: ${{ github.event.label.name == 'terratest' }}
         uses: 'clouddrove/github-actions@v9.0.2'
         with:
@@ -39,7 +39,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          - name: 'Terratest Secure'
+          - name: 'Terratest pre-existing-sns-consolidated-acct'
         if: ${{ github.event.label.name == 'terratest' }}
         uses: 'clouddrove/github-actions@v9.0.2'
         with:
@@ -48,7 +48,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          - name: 'Terratest Secure'
+          - name: 'Terratest pre-existing-sns-with-acct-id'
         if: ${{ github.event.label.name == 'terratest' }}
         uses: 'clouddrove/github-actions@v9.0.2'
         with:
