--- a/README.yaml
+++ b/README.yaml
@@ -21,12 +21,12 @@ badges:
   - name: "Licence"
     image: "https://img.shields.io/badge/License-APACHE-blue.svg"
     url: "LICENSE.md"
-  # - name: "tfsec"
-  #   image: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/tfsec.yml/badge.svg"
-  #   url: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/tfsec.yml"
-  # - name: "static-checks"
-  #   image: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/terraform.yml/badge.svg"
-  #   url: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/terraform.yml"
+  - name: "tfsec"
+    image: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/tfsec.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/tfsec.yml"
+  - name: "static-checks"
+    image: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/terraform.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/terraform.yml"
 
 #  description of this project
 # yamllint disable rule:line-length
@@ -43,9 +43,8 @@ usage: |-
   Here is examples of how you can use this module in your inventory structure:
   ### cloudwatch-billing-alert-to-new-sns-consolidated-acct
   ```hcl
-      module "billing_cloudwatch_alert" {
+  module "billing_cloudwatch_alert" {
   source = "clouddrove/terraform-aws-cost-billing-alarm/aws"
-
   name                      = "billing/aws"
   environment               = "test"
   label_order               = ["name", "environment"]
@@ -56,9 +55,8 @@ usage: |-
 
   ### cloudwatch-billing-alert-to-new-sns-with-acct-id
   ```hcl
-      module "billing_cloudwatch_alert" {
+  module "billing_cloudwatch_alert" {
   source = "clouddrove/terraform-aws-cost-billing-alarm/aws"
-
   name                      = "billing/aws"
   environment               = "test"
   label_order               = ["name", "environment"]
@@ -71,9 +69,8 @@ usage: |-
 
   ### cloudwatch-billing-alert-to-pre-existing-sns-consolidated-acct
   ```hcl
-       module "billing_cloudwatch_alert" {
+  module "billing_cloudwatch_alert" {
   source = "clouddrove/terraform-aws-cost-billing-alarm/aws"
-
   name                      = "billing/aws"
   environment               = "test"
   label_order               = ["name", "environment"]
@@ -86,9 +83,8 @@ usage: |-
 
   ### cloudwatch-billing-alert-to-pre-existing-sns-with-acct-id
   ```hcl
-       module "billing_cloudwatch_alert" {
+  module "billing_cloudwatch_alert" {
   source = "clouddrove/terraform-aws-cost-billing-alarm/aws"
-
   name                      = "billing/aws"
   environment               = "test"
   label_order               = ["name", "environment"]
