--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Clone repo
-        uses: actions/checkout@master
+        uses: actions/checkout@aws-cost-billing-alarm
 
       - name: tfsec
         uses: aquasecurity/tfsec-sarif-action@v0.1.0
