--- a/README.yaml
+++ b/README.yaml
@@ -22,16 +22,16 @@ badges:
     image: "https://img.shields.io/badge/License-APACHE-blue.svg"
     url: "LICENSE.md"
   - name: "tfsec"
-    image: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/tfsec.yml/badge.svg"
-    url: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/tfsec.yml"
+    image: "https://github.com/clouddrove/terraform-aws-cost-billing-alarm/actions/workflows/tfsec.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-cost-billing-alarm/actions/workflows/tfsec.yml"
   - name: "static-checks"
-    image: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/terraform.yml/badge.svg"
-    url: "https://github.com/clouddrove/terraform-aws-ec2/actions/workflows/terraform.yml"
+    image: "https://github.com/clouddrove/terraform-aws-cost-billing-alarm/actions/workflows/terraform.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-cost-billing-alarm/actions/workflows/terraform.yml"
 
 #  description of this project
 # yamllint disable rule:line-length
 description: |-
-  Terraform module to create ancost billing alarm resource on AWS with sns topic.
+  Terraform module to create aws cost billing alarm resource on AWS with sns topic.
 
 # extra content
 include:
@@ -42,7 +42,7 @@ include:
 usage: |-
   Here is examples of how you can use this module in your inventory structure:
   ### cloudwatch-billing-alert-to-new-sns-consolidated-acct
-  ```hcl
+```hcl
   module "billing_cloudwatch_alert" {
   source = "clouddrove/terraform-aws-cost-billing-alarm/aws"
   name                      = "billing/aws"
@@ -64,7 +64,7 @@ usage: |-
   aws_account_id            = 111111111111
   monthly_billing_threshold = 500
   currency                  = "USD"
-}
+  }
   ```
 
   ### cloudwatch-billing-alert-to-pre-existing-sns-consolidated-acct
@@ -78,7 +78,7 @@ usage: |-
   monthly_billing_threshold = 500
   currency                  = "USD"
   aws_sns_topic_arn         = ["arn:aws:lambda:us-east-1:111111111111:function:bb-root-org-notify_slack"]
-}
+  }
   ```
 
   ### cloudwatch-billing-alert-to-pre-existing-sns-with-acct-id
