--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@aws-cost-billing-alarm
+        uses: actions/checkout@v2
 
       - name: Terraform min/max versions
         id: minMax
