--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -2,7 +2,7 @@ name: 'Terratest GitHub Actions'
 on:
   pull_request:
     branches:
-      - aws-cost-bill-alarm
+      - master
     types: [labeled]
 
 jobs:
