fix: update github action and tf code

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,8 +2,20 @@
 # package ecosystems to update and where the package manifests are located.
 # Please see the documentation for all configuration options:
 # https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+
 version: 2
 updates:
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 3
+    assignees:
+      - "clouddrove-ci"
+    reviewers:
+      - "approvers"
+
   - package-ecosystem: "terraform" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
@@ -14,6 +26,9 @@ updates:
     # Add reviewer
     reviewers:
       - "approvers"
+    # Allow up to 3 open pull requests for pip dependencies
+    open-pull-requests-limit: 3
+
   - package-ecosystem: "terraform" # See documentation for possible values
     directory: "_example/cloudwatch-billing-alert-to-new-sns-consolidated-acct" # Location of package manifests
     schedule:
@@ -24,6 +39,9 @@ updates:
     # Add reviewer
     reviewers:
       - "approvers"
+    # Allow up to 3 open pull requests for pip dependencies
+    open-pull-requests-limit: 3
+
   - package-ecosystem: "terraform" # See documentation for possible values
     directory: "_example/cloudwatch-billing-alert-to-new-sns-with-acct-id" # Location of package manifests
     schedule:
@@ -34,6 +52,9 @@ updates:
     # Add reviewer
     reviewers:
       - "approvers"
+    # Allow up to 3 open pull requests for pip dependencies
+    open-pull-requests-limit: 3
+
   - package-ecosystem: "terraform" # See documentation for possible values
     directory: "_example/cloudwatch-billing-alert-to-pre-existing-sns-consolidated-acct" # Location of package manifests
     schedule:
@@ -44,6 +65,9 @@ updates:
     # Add reviewer
     reviewers:
       - "approvers"
+  # Allow up to 3 open pull requests for pip dependencies
+  open-pull-requests-limit: 3
+
   - package-ecosystem: "terraform" # See documentation for possible values
     directory: "_example/cloudwatch-billing-alert-to-pre-existing-sns-with-acct-id" # Location of package manifests
     schedule:
@@ -54,3 +78,5 @@ updates:
     # Add reviewer
     reviewers:
       - "approvers"
+    # Allow up to 3 open pull requests for pip dependencies
+    open-pull-requests-limit: 3
