--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -8,5 +8,5 @@ jobs:
     secrets:
       GITHUB: ${{ secrets.GITHUB }}
     with:
-      tfcheck: 'tf-checks-example / Evaluate Terraform versions (1.6.2, ./_example/)'
+      tfcheck: 'cloudwatch-billing-alert-to-pre-existing-sns-with-acct-id-example / Check code format'
 ...
